Fixed nav on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ a, a:hover, a:active, a:visited {
 
 .typed-intrdocution-container {
   text-align: center;
-  min-height: 100px;
+  min-height: 60px;
 }
 
 .typed-intrdocution-container .greeting {
